--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "author": "Ashley Lee",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.1",
+    "json-web-token": "^3.2.0",
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
