--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "helmet": "^3.23.1",
     "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
     "morgan": "^1.10.0",
     "pg": "^8.3.3",
