--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "fast-csv": "^4.3.6",
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
