--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "knex": "^0.16.3",
     "morgan": "^1.10.0",
     "pg": "^7.18.2",
+    "postgres-migrations": "^5.1.0",
     "xss": "^1.0.3"
   },
   "devDependencies": {
