--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "morgan": "^1.10.0",
     "pg": "^7.18.2",
     "postgres-migrations": "^5.1.0",
-    "xss": "^1.0.3"
+    "xss": "^1.0.3",
+    "postgrator-cli": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.9",
-    "postgrator-cli": "^3.1.0",
     "supertest": "^3.3.0"
   }
 }
