--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
     "morgan": "^1.10.0",
-    "pg": "^7.18.2",
+    "pg": "^8.5.1",
+    "postgrator-cli": "^4.0.0",
     "postgres-migrations": "^5.1.0",
-    "xss": "^1.0.3",
-    "postgrator-cli": "^3.1.0"
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
