--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "snap-locator-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js",
-    "migrate": "postgrator 1 --config postgrator-config.js",
-    "migrate:test": "env NODE_ENV=test npm run migrate",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "predeploy": "npm audit && npm run migrate:production",
+    "postdeploy": "npm run migrate:production",
+    "deploy": "git push heroku master",
+    "dev": "nodemon src/server.js",
+    "test": "mocha --require test/setup.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "heroku run npm run migrate"
   },
   "keywords": [],
   "author": "ashley",
@@ -28,7 +30,7 @@
     "knex": "^0.16.3",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
-    "postgrator-cli": "^4.0.0",
+    "postgrator-cli": "^3.2.0",
     "postgres-migrations": "^5.1.0",
     "xss": "^1.0.3"
   },
