--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
     "express-validator": "^6.4.0",
     "fast-csv": "^4.3.6",
     "helmet": "^3.15.0",
@@ -31,6 +32,9 @@
     "pg": "^8.5.1",
     "postgrator-cli": "^3.2.0",
     "postgres-migrations": "^5.1.0",
+    "rate-limiter-flexible": "^2.2.1",
+    "raw-body": "^2.4.0",
+    "redis": "^3.0.2",
     "xss": "^1.0.3"
   },
   "devDependencies": {
