--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "predeploy": "npm audit && npm run migrate:production",
+    "predeploy": "npm audit",
     "postdeploy": "npm run migrate:production",
     "deploy": "git push heroku master",
     "dev": "nodemon src/server.js",
