--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postdeploy": "npm run migrate:production",
     "deploy": "git push heroku master",
     "dev": "nodemon src/server.js",
-    "test": "mocha --require test/setup.js",
+    "test": "mocha",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
     "migrate:production": "heroku run npm run migrate"
